webhook-service-annotation.yml
apiVersion: v1
kind: Service
metadata:
  name: machine-taint-webhook-service
  namespace: openshift-machine-api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: machine-taint-webhook-tls
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: machine-taint-webhook
